# googrs

./: Cargo.toml  README.md  reader_md_results.txt  reader_results.html  search_full.rs  search_results.md  search_results.txt
examples/: search_md.rs  search_reader.rs  search_reader_md.rs  search_to_text.rs  search_url.rs
src/: blocklist.rs  fetcher.rs  images.rs  lib.rs  md_parse.rs  reassembler.rs  user_agents.rs
src3/: lib.rs  md_parse.rs  reassembler.rs  scorer.rs  user_agents.rs
