[package]
name = "googrs"
version = "0.1.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[lib]
name = "googrs"
path = "src/lib.rs"

[[example]]
name = "search_url"
path = "examples/search_url.rs"

[[example]]
name = "search_full"
path = "examples/search_full.rs"

[dependencies]
htmd = "0.1.6"
markup5ever = "0.14.0"
rand = "0.8.5"
readable-readability = "0.4.0"
reqwest = { version = "0.12.7", features = ["cookies"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
readability = "0.3.0"
readablers = { git = "https://github.com/Lynx-Eco/readablers.git", version = "0.1.0" }
lol_read = { git = "https://github.com/Lynx-Eco/lol-read.git", version = "0.1.0" }
html2text = "0.6.0"
pulldown-cmark = "0.12.1"
regex = "1.10.6"
thiserror = "1.0.64"
serde_urlencoded = "0.7.1"
anyhow = "1.0"
urlencoding = "2.1.0"
url = "2.5.2"
image = "0.25.2"
serde_json = "1.0.128"
tokio-process = "0.2.5"
headless_chrome = "1.0.15"
